version 0.60.1
14/03/2018
	- added admin-related SQL codes (margaretha)
	- updated AdminDao (margaretha)
	- added optional username query parameter to group list controller (margaretha) 
	
version 0.60 release
14/03/2018
	- set up mail settings using localhost port 25 (margaretha)
	- added mail template in kustvakt configuration (margaretha)
	- added mail settings to readme (margaretha)
	- disabled email notification for auto group (margaretha)
	- added metadata retrieval (diewald)
	- enabled custom implementation for email address retrieval (margaretha)
	- removed old policy and deprecated code (margaretha)
	- moved authentication related code to /full (margaretha)
	- added userRoles attribute to UserGroupDto. (margaretha)
	- fixed sqlite trigger (margaretha)
	- fixed member exist error message (margaretha)
	- fixed member invitation to join deleted group (margaretha)
	- added checking deleted group (margaretha)

version 0.59.10	
20/02/2018 
	- added sort VC by id (margaretha)
	- added test cases regarding VC sharing (margaretha)
	- implemented withdraw VC from publication (margaretha)
	- added Changes file (margaretha)
	- implemented add/invite users to group (margaretha)
	- implemented delete user-group and member tasks (margaretha)
	- added userMemberStatus in group lists (margaretha)
	- updated and added SQL test data (margaretha)
	- added user group related tests (margaretha)
	- implemented custom configuration for deleting user groups and members (margaretha)
	- updated library versions and java environment (margaretha)
	- added expiration time check for member invitation (margaretha)
	- moved .properties files (margaretha) 
	- merged changelog file to Changes (margaretha)
	- updated status codes and error messages to be more detailed (margaretha)
	- testing mail implementation using embedded jetty jndi (margaretha)
	- fixed collection rewrite regarding OR operation with other fields (margaretha)